--- a/GChat/app/src/main/AndroidManifest.xml
+++ b/GChat/app/src/main/AndroidManifest.xml
@@ -4,6 +4,17 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <!-- GCM connects to Google Services. -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- GCM requires a Google account. -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <!-- Keeps the processor from sleeping when a message is received. -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <!-- Access to  device info-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-feature    android:required="true"
                     android:name="android.hardware.location.gps"/>
@@ -33,6 +44,7 @@
         <activity
             android:name=".ActivityClasses.SecondActivity"
             android:label="@string/app_name" />
+
         <receiver android:name=".TrackingLocationReceiver"
             android:exported="false">
             <intent-filter>
